# astro-provider-databricks

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  Tiltfile  noxfile.py  pyproject.toml
.github/: CODEOWNERS  ci-test-connections.yaml
.github/scripts/: verify_tag_and_version.py
.github/workflows/: ci.yaml  ci.yml  docs.yml
dev/: Dockerfile  docker-compose.yaml  packages.txt
dev/dags/: basic_notebooks.py  common_operator.py  example_databricks_workflow.py  simple_databricks.py  task_group_example.py
dev/logs/scheduler/: latest
docs/: contributing.rst  index.rst
example_dags/: example_databricks_notebook.py  example_databricks_workflow.py  example_task_group.py
quickstart/: astro-cli.md  without-astro-cli.md
src/astro_databricks/: __init__.py  settings.py
src/astro_databricks/operators/: __init__.py  common.py  notebook.py  workflow.py
src/astro_databricks/plugins/: plugin.py
src/astro_sdk_template/: __init__.py
tests/: conftest.py  pytest.ini  test_example_dags.py
tests/databricks/: test_common.py  test_notebook.py  test_plugin.py  test_workflow.py
tests/example_dags/: test_example_databricks_notebook.py  test_example_databricks_workflow.py
